[package]
name = "beamyglitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multimap = "0.8.3"
num_enum = "0.5.6"
vst = "0.2.1"
wmidi = "4.0.6"

[lib]
name = "beamyglitch"
crate-type = ["cdylib"]
